:art: highlight.jsの見た目の変更

--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,7 @@
 	<link rel="icon" type="image/png" href="favicon.png">
 	<link
   		rel="stylesheet"
-  		href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.2/styles/atom-one-dark-reasonable.min.css"
+  		href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.2/styles/atom-one-light.min.css"
 	/>
 
 	<!-- Sapper creates a <script> tag containing `src/client.js`
