:package: [WIP] Svelte-Kitへの移行

--- a/src/app.html
+++ b/src/app.html
@@ -21,6 +21,6 @@
 <body>
 	<!-- The application will be rendered inside this element,
 	     because `src/client.js` references it -->
-	<div id="sapper">%svelte.html%</div>
+	<div id="sapper">%svelte.body%</div>
 </body>
 </html>
