:sparkles: app.htmlの変更

--- a/src/app.html
+++ b/src/app.html
@@ -16,11 +16,11 @@
 
 	<!-- This contains the contents of the <svelte:head> component, if
 	     the current page has one -->
-	%svelte.head%
+	%sveltekit.head%
 </head>
 <body>
 	<!-- The application will be rendered inside this element,
 	     because `src/client.js` references it -->
-	<div id="sapper">%svelte.body%</div>
+	<div id="sapper">%sveltekit.body%</div>
 </body>
 </html>
